cmake_minimum_required(VERSION 3.16)
project(matrix)
include_directories(${PROJECT_SOURCE_DIR}/include)
add_compile_options(-march=native -O3)
add_executable(main src/test3.cpp src/matmul_x86.cpp)
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(main PUBLIC OpenMP::OpenMP_CXX)
endif()
set(EXECUTABLE_OUTPUT_PATH, ${PROJECT_SOURCE_DIR}/bin)
